Fix alignment

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -138,7 +138,7 @@ a:hover {
 }
 
 .menu li {
-  margin: 1rem;
+  margin: 1rem 1rem 0 0;
   display: inline-block;
   vertical-align: top;
   position: relative;
